<resources>
    <string name="wiki">Wiki</string>
    <string name="changesets">Changesets</string>
    <string name="repositories">Repositories</string>
    <string name="description">Description</string>
    <string name="files">Files</string>
    <string name="changeset_changes">Changes</string>
    <string name="changeset_comments">Comments</string>
    <string name="source">Source</string>
    <string name="branch">Branch</string>
    <string name="tag">Tag</string>
    <string name="issues">Issues</string>
    <string name="milestones">Milestones</string>
    <string name="log_out">Log out</string>
    <string name="search_issue">Search for issues</string>
    <string name="search_repo">Search for repositories</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="clear_cache">Clear cache</string>
    <string name="settings">Settings</string>
    <string name="new_issue">Create new issue</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="type">Type</string>
    <string name="submit_new_issue">Submit new issue</string>
    <string name="issue_filter_prompt">Filter issues</string>
    <string name="status">Status</string>
    <string name="menu_source">Source</string>
    <string name="submit_comment">Submit</string>
    <string name="new_comment_hint">Leave a comment</string>
    <string name="add">Add</string>
    <string name="proceed">Proceed</string>
    <string name="submit">Submit</string>
    <string name="priority">Priority</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="unable_to_write_external">%1$s Unable to write to external storage.</string>
    <string name="unable_to_create_dir">Unable to create directory %1$s. Maybe the SD card is not mounted?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_close">Close</string>
    <string name="open_link_failed">Unable to open link</string>
    <string name="share">Share</string>
    <string name="contribute">Contribute</string>
    <string name="contribute_dialog_title">Help making Bitbeaker better</string>
    <string name="contribute_beta_releases">Participate in Beta testing</string>
    <string name="dialog_oauth_not_authorized">You are not authorized!</string>
    <string name="dialog_oauth_request_token_fetch_failed">Couldn\'t get a Request Token from Bitbucket!</string>
    <string name="dialog_oauth_request_token_fetch_failed_reason">Possible reason: Your system clock may not be on time.</string>
    <string name="dialog_oauth_access_token_fetch_failed">Couldn\'t get an Access Token from Bitbucket!</string>
    <string name="dialog_oauth_load_failed">Couldn\'t load Bitbucket or related website!</string>
    <string name="oauth_step1">Step 1: Requesting a Request Token from Bitbucket</string>
    <string name="oauth_step2">Step 2: Login to Bitbucket and grant access for Bitbeaker</string>
    <string name="oauth_step3">Step 3: Requesting an Access Token</string>
    <string name="oauth_step4">Step 4: Get user data</string>
    <string name="navigationdrawer_open">Open navigation drawer</string>
    <string name="navigationdrawer_close">Close navigation drawer</string>
    <string name="navigationdrawer_issue_tracker">Issue tracker</string>
    <string name="AsyncErrorMSG">There was a problem retrieving and/or processing data from Bitbucket.org. Checking your data connectivity and trying again might help.</string>
    <string name="no_branches">No branches found.</string>
    <string name="no_changesets_error">This repository may have no changesets yet, or another error happened.</string>
    <string name="events">Events</string>
    <string name="please_wait_still_loading">Still loading, please try again.</string>
    <string name="repository_copy_url">Copy URL</string>
    <string name="repository_url_copied">URL copied to clipboard</string>
    <string name="repository">Repository</string>
    <string name="event_type_commit">Committed to repository</string>
    <string name="event_type_pushed">Pushed to repository</string>
    <string name="event_type_fork">Forked repository</string>
    <string name="event_type_mq">Created patch queue</string>
    <string name="event_type_create">Created repository</string>
    <string name="event_type_delete">Deleted repository</string>
    <string name="event_type_issue_update">Updated issue</string>
    <string name="event_type_issue_comment">Updated issue comment</string>
    <string name="event_type_wiki_updated">Updated wiki page</string>
    <string name="event_type_wiki_created">Created wiki page</string>
    <string name="event_type_wiki_deleted">Deleted wiki page</string>
    <string name="event_type_file_uploaded">Uploaded file</string>
    <string name="event_type_strip">Stripped repository</string>
    <string name="event_type_report_issue">Reported issue</string>
    <string name="event_type_start_follow_repo">Started following the repository</string>
    <string name="event_type_stop_follow_repo">Stopped following the repository</string>
    <string name="event_type_start_follow_issue">Started following an issue</string>
    <string name="event_type_stop_follow_issue">Stopped following issue</string>
    <string name="event_type_start_follow_user">Started following user</string>
    <string name="event_type_stop_follow_user">Stopped following user</string>
    <string name="event_type_pullrequest_created">Created pull request</string>
    <string name="event_type_pullrequest_updated">Updated pull request</string>
    <string name="event_type_pullrequest_fulfilled">Accepted pull request</string>
    <string name="event_type_pullrequest_rejected">Rejected pull request</string>
    <string name="event_type_pullrequest_superseded">Marked pull request as superseded</string>
    <string name="event_type_pullrequest_comment_created">Created pull request comment</string>
    <string name="event_type_pullrequest_comment_updated">Updated pull request comment</string>
    <string name="event_type_pullrequest_comment_deleted">Deleted pull request comment</string>
    <string name="event_type_pullrequest_like">Approved a pull request</string>
    <string name="event_type_pullrequest_unlike">Unapproved a pull request</string>
    <string name="event_type_cset_comment_updated">Updated changeset comment</string>
    <string name="event_type_cset_comment_deleted">Deleted changeset comment</string>
    <string name="event_type_cset_comment_created">Created changeset comment</string>
    <string name="event_type_cset_like">Approved a changeset</string>
    <string name="event_type_cset_unlike">Unapproved a changeset</string>
    <string name="event_type_team_access_gained_admin">Gained admin rights</string>
    <string name="event_type_team_access_gained_collab">Gained collaboration rights</string>
    <string name="event_type_team_lost_access">Lost access to team account</string>
    <string name="event_type_team_access_changed_admin">Changed admin access on team</string>
    <string name="event_type_team_access_changed_collab">Changed collaborator access on team</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="changeset">Changeset:</string>
    <string name="author_label">Author:</string>
    <string name="branch_label">Branch:</string>
    <string name="tags_label">Tags:</string>
    <string name="login">Login</string>
    <string name="diff_not_found">Diff not found for requested file.</string>
    <plurals name="comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="issues_menu_any_status">Any status</string>
    <string name="issues_menu_custom_query">Custom query</string>
    <string name="issues_menu_all_kind">All kind</string>
    <string name="issues_not_found">No issues found.</string>
    <string name="last_updated">Last updated</string>
    <string name="add_comment">Add a comment</string>
    <string name="comment_submitted">New comment submitted!</string>
    <string name="report_new_issue">Report new issue</string>
    <string name="issue_submitted">New issue submitted!</string>
    <string name="update_issue">Update issue</string>
    <string name="issue_updated">Updated issue submitted!</string>
    <string name="your_repositories">Your repositories</string>
    <string name="fork_of">Fork of</string>
    <string name="favorites">Favorites</string>
    <string name="dialog_remove_own_admin_rights_title">Remove rights</string>
    <string name="dialog_remove_own_admin_rights_message">Do you really want to remove your access rights to the \'%1$s\' repository?</string>
    <string name="remove_own_admin_rights_successful">You are no longer an admin of the project.</string>
    <string name="remove_own_admin_rights_forbidden">Error: you do not have the required rights for this project.</string>
    <string name="remove_own_admin_rights_error">Error %1$s</string>
    <string name="repositories_sorting_order">Sorting order</string>
    <string name="repositories_sorting_order_owner_asc">Owner, ascending</string>
    <string name="repositories_sorting_order_reponame_asc">Repository, ascending</string>
    <string name="repositories_sorting_order_updated_desc">Updated, descending</string>
    <string name="please_enter_more_text">Please enter at least 3 letters.</string>
    <string name="no_repositories_found">No repositories found.</string>
    <string name="search_results_title">Results for \"%1$s\"</string>
    <string name="file_not_found">The folder "%1$s" does not exist in the "%2$s" branch, or there was a problem retrieving and/or processing data from Bitbucket.org</string>
    <string name="issue_id">Issue #%1$d</string>
    <string name="issue_comments">Comments:</string>
    <string name="issue_details_unavailable">Contents updated: details not available via API</string>
    <string name="issueStatusLabel">Status:</string>
    <string name="issueTypeLabel">Type:</string>
    <string name="issuePriorityLabel">Priority:</string>
    <string name="issueAuthorLabel">By:</string>
    <string name="issueOnTimestampLabel">on</string>
    <string name="issueReporterAnonymous">Anonymous</string>
    <string name="issueResponsible">Assignee:</string>
    <string name="issueResponsibleHint">Username</string>
    <string name="prefs_category_favorites">Favorite repositories</string>
    <string name="prefs_category_sync">Sync</string>
    <string name="prefs_favoritesResetTitle">Reset favorites</string>
    <string name="prefs_favoritesResetSummary">Reset list of favorite repositories</string>
    <string name="prefs_favorites_export_title">Export favorites</string>
    <string name="prefs_favorites_import_title">Import favorites</string>
    <string name="prefs_about_title">About Bitbeaker</string>
    <string name="prefs_sync_enable_title">Notifications</string>
    <string name="prefs_sync_enable_summary_on">Receives notifications from favorite repositories</string>
    <string name="prefs_sync_enable_summary_off">Enable notifications for favorite repositories</string>
    <string name="prefs_sync_interval_title">Notifications interval</string>
    <string name="user_newsfeed">Your newsfeed</string>
    <string name="milestone">Milestone</string>
    <string name="component">Component</string>
    <string name="version">Version</string>
    <string name="issueVersionLabel">Version:</string>
    <string name="issueComponentLabel">Component:</string>
    <string name="issueMilestoneLabel">Milestone:</string>
    <string name="resolve">Resolve</string>
    <string name="reopen">Reopen</string>
</resources>