<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/changeset_message"
        style="?android:textAppearanceMedium"
        android:padding="@dimen/spacing_small"
        android:text="@string/description"
        android:textIsSelectable="true"/>

    <TableRow
        android:padding="@dimen/spacing_small">

        <TextView
            style="?android:textAppearanceMedium"
            android:labelFor="@+id/changeset_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_label"/>

        <TextView
            android:id="@id/changeset_author"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"/>

    </TableRow>

    <TableRow
        android:id="@+id/branch_row"
        android:padding="@dimen/spacing_small">

        <TextView
            style="?android:textAppearanceMedium"
            android:labelFor="@+id/changeset_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch_label"/>

        <TextView
            android:id="@id/changeset_branch"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"/>

    </TableRow>

    <TableRow
        android:id="@+id/tags_row"
        android:padding="@dimen/spacing_small">

        <TextView
            style="?android:textAppearanceMedium"
            android:labelFor="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags_label"/>

        <TextView
            android:id="@id/tags"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"/>

    </TableRow>

</merge>
