<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="4dip">

        <LinearLayout
            android:id="@+id/issue_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/issue_title"
                android:textSize="18dip"
                android:text="@string/nothing"
                android:textStyle="bold">
            </TextView>
            

           <LinearLayout
            android:id="@+id/issueSubmitterInfoTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >
            
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issueAuthorLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issueAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>
                    
                    <TextView
                        android:id="@+id/issueOnTimestampLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dip"
                        android:paddingLeft="5dip"
                        android:text="@string/issueOnTimestampLabel" >
                    </TextView>
                    
                    <TextView
                        android:id="@+id/issueTimestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

            </LinearLayout>

            <TableLayout
                android:id="@+id/issueStatusTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issueStatusLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issueStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/issueResponsible"
                        android:paddingRight="5dip">

                        </TextView>

                    <TextView
                        android:id="@+id/issueResponsible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>
                </TableRow>

               <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issueTypeLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issueType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issuePriorityLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issuePriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issueComponentLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issueComponent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issueMilestoneLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issueMilestone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issueVersionLabel"
                        android:paddingRight="5dip" >
                    </TextView>

                    <TextView
                        android:id="@+id/issueVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing" >
                    </TextView>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <ListView
        android:id="@+id/issue_comments_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dip" >
    </ListView>

</LinearLayout>